# okuri

./: .gitignore  README.md  compose.yml  main.py  pyproject.toml
.github/workflows/: pypi.yaml
okuri/: _types.py  _utils.py  app.py  exc.py
okuri/context/: __init__.py  run.py  system.py
okuri/flow/: contract.py  msg_ctrl.py  route.py  workflow.py
okuri/flow/state/: _utils.py  smachine.py
okuri/flow/task/: history.py  runner.py  task.py
okuri/flow/task/middlewares/pre/: preprocess.py
okuri/reference/: __init__.py  api.py  helper.py  types.py
okuri/reference/internal/: backend.py  reference.py  registry.py
okuri/resource/: manager.py
